# bjj-vqa

./: .env.example  .gitignore  AGENTS.md  ATTRIBUTIONS.md  CLAUDE.md  CONTEXT.md  README.md  TODO.md  eval.yaml  pyproject.toml
.agents/skills/add-questions/: SKILL.md
.agents/skills/gradio-preview/: SKILL.md
.agents/skills/gradio-preview/scripts/: screenshot_gradio.py
.agents/skills/hf-cli/: SKILL.md
.agents/skills/plan-first/: SKILL.md
.claude/skills/: hf-cli.md
.claude/skills/files-owned/: SKILL.md
.claude/skills/methodology-conformance/: SKILL.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/workflows/: eval-model.yml  eval-test.yml  evals.yml  generate.yml  publish.yml  quality-gate.yml  validate.yml
app/: README.md  eval_demo.py  requirements.txt
data/: samples.json
demo/: README.md  app.py  results.json
demo/src/: generate_placeholder.py  results.py
docs/: PRD.md  architecture.md  glossary.md  hf-community-evals.md  methodology.md
docs/adr/: 0003-code-license-gpl3.md  0005-evaluation-via-openrouter.md  0006-question-construction-methodology.md  0007-timestamp-field.md  0008-eval-framework-deepeval.md  README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/decisions/: 0001-eval-framework-inspect-ai.md  0002-dataset-license-cc-by-sa.md  0003-code-license-gpl3.md  0004-schema-validation-pydantic.md  0005-evaluation-via-openrouter.md  0006-question-construction-methodology.md  README.md
docs/research/: README.md
eval_results/: placeholder_results.json
evals/: __init__.py  multimodal_model.py  test_question_quality.py  test_questions.py
prompts/: generate.md
prompts/rubric/: test_T1_stem_leak.md  test_T2_role_coherence.md  test_T3_single_correct.md  test_T4_image_dependency.md  test_T5_image_clarity.md  test_T6_bjj_correctness.md
scripts/: __init__.py  balance_check.py  extract_metrics.py  no_image_report.py  submit_hf.py  verify_vision.py
sources/: registry.jsonl
src/app/: __init__.py  app.py
src/bjj_vqa/: __init__.py  cli.py  rubric.py  schema.py  scorer.py  task.py
src/bjj_vqa/demo/: __init__.py  app.py  results.py
src/bjj_vqa/generate/: __init__.py  prompt.md
tests/: __init__.py  conftest.py  helpers.py  test_app.py  test_cli.py  test_generate.py  test_rubric.py  test_schema.py  test_task.py  test_vision_pipeline.py
tests/fixtures/: registry.jsonl  samples.json
