[project]
name = "bjj-vqa"
version = "0.2.0"
description = "Brazilian Jiu-Jitsu Visual Q&A Benchmark"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
keywords = ["bjj", "jiu-jitsu", "vqa", "benchmark", "multimodal", "vision-language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
urls = { Repository = "https://github.com/matheusccouto/bjj-vqa", Dataset = "https://huggingface.co/datasets/couto/bjj-vqa" }
dependencies = [
    "inspect-ai>=0.3.0",
    "openai>=1.0.0",
    "huggingface-hub>=0.20.0",
    "datasets>=2.14.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
demo = [
    "gradio>=4.0.0",
]

[project.scripts]
bjj-vqa = "bjj_vqa.cli:main"

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
]
test = [
    "pytest>=8.0.0",
]
lint = [
    "ruff>=0.9.0",
    "ty>=0.0.1",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",    # type annotations not required in tests
    "S101",   # assert-used
    "D102",   # missing docstring in public method
    "D401",   # docstring imperative mood - fixtures describe what they return
    "PLR2004",# magic value comparison - acceptable in test assertions
    "PLC0415",# import not at top level - needed for post-env-var imports
    "ARG002", # unused method argument - pytest fixtures and @patch args
]
"src/bjj_vqa/cli.py" = [
    "T201",   # print-used - CLI uses print for output
    "TC001",  # SampleRecord used at runtime (model_validate calls)
    "FBT001", # boolean arg in CLI handlers
    "FBT002", # boolean default arg in CLI handlers
    "PLC0415",# lazy import to avoid requiring gradio
    "D103",   # missing docstring in public function (argparse handlers)
]
"src/bjj_vqa/demo/**/*.py" = [
    "INP001", # implicit namespace package — demo subpackage
    "T201",   # print-used in CLI argparse guard
    "PLR2004",# magic values in UI styling
    "ARG001", # unused function args for Gradio callbacks
    "SIM401", # dict.get conflicts with ty overload check
    "S311",   # pseudo-random is fine for placeholder demo data
    "FBT001", # boolean arg in CLI handler
    "FBT002", # boolean default arg in CLI handler
    "PLC0415",# import not at top level — argparse guard
]
"scripts/**/*.py" = [
    "INP001", # implicit namespace package - scripts are standalone
    "T201",   # print-used - scripts output to stdout
    "PLR2004",# magic value comparison - acceptable for simple scripts
    "S101",   # assert-used - scripts use assert for validation
]

[tool.pytest.ini_options]
markers = [
    "vision: requires a live model API key; run with -m vision",
]

[tool.ty.environment]
python = ".venv"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests", "scripts"]